--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@hpcc-js/wasm-zstd": "^1.3.2",
     "@monaco-editor/react": "^4.7.0",
+    "@msgpack/msgpack": "^3.1.2",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.10.0",
