--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/socket.io": "^3.0.1",
     "@types/stream-json": "^1.7.8",
     "@types/three": "^0.181.0",
@@ -49,6 +50,7 @@
     "minio": "^8.0.6",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.10",
     "pm2": "^6.0.8",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
