--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/stream-json": "^1.7.8",
     "@types/three": "^0.181.0",
     "@types/validator": "^13.15.2",
+    "pino-pretty": "^13.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
@@ -51,6 +52,7 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.10",
+    "pino": "^10.1.0",
     "pm2": "^6.0.8",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
