--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
+    "@types/react-window": "^1.8.8",
     "@types/three": "^0.177.0",
     "@vercel/analytics": "1.3.1",
     "@xterm/addon-fit": "^0.10.0",
@@ -98,6 +99,7 @@
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
     "react-useanimations": "^2.10.0",
+    "react-window": "^2.2.3",
     "react-xtermjs": "^1.0.10",
     "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1",
