--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@gltf-transform/functions": "^4.2.1",
     "@msgpack/msgpack": "^3.1.2",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@types/ssh2": "^1.15.5",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -56,6 +57,7 @@
     "pm2": "^6.0.8",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
+    "ssh2": "^1.17.0",
     "three": "^0.181.1",
     "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
