--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,9 @@
     "@gltf-transform/functions": "^4.2.1",
     "@msgpack/msgpack": "^3.1.2",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/ssh2": "^1.15.5",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
@@ -53,6 +56,10 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.10",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0",
     "pino": "^10.1.0",
     "pm2": "^6.0.8",
     "sharp": "^0.34.3",
