--- a/server/package.json
+++ b/server/package.json
@@ -43,11 +43,13 @@
     "canvas": "^3.2.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "gl": "^8.1.6",
     "gl-matrix": "^3.4.4",
     "helmet": "^8.1.0",
+    "identicon.js": "^2.3.3",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "meshoptimizer": "^0.24.0",
