--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
+    "@types/dockerode": "^3.3.47",
     "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.3",
     "@types/gl": "^6.0.5",
@@ -44,6 +45,7 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dockerode": "^4.0.9",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "gl": "^8.1.6",
