refactor: elimination of duplicate validation code and desktop application

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -13,16 +13,16 @@
       "@/*": ["src/*"]
     },
 
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "jsx": "react-jsx",
 
-    /* Linting */
+    "noEmit": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "outDir": "dist",
+    "noUnusedLocals": false,     
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
