--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,8 +1,12 @@
 {
+  "type": "module",
   "scripts": {
-    "start": "electron -r ts-node/register main.ts"
+    "build": "tsc",
+    "start": "npm run build && electron dist/src/main.js",
+    "dev": "npm run build && electron dist/src/main.js"
   },
   "devDependencies": {
+    "@types/dockerode": "^3.3.47",
     "@types/electron": "^1.4.38",
     "@types/node": "^24.10.1",
     "electron": "^39.2.6",
@@ -10,5 +14,8 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "wait-on": "^9.0.3"
+  },
+  "dependencies": {
+    "dockerode": "^4.0.9"
   }
 }
