--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "@vercel/analytics": "1.3.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "@xyflow/react": "^12.10.0",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "clarinet": "^0.12.6",
