--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "delete:pm2": "pm2 delete api"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@stylistic/eslint-plugin": "^5.6.1",
     "@types/archiver": "^6.0.3",
     "@types/body-parser": "^1.19.6",
     "@types/compression": "^1.8.1",
@@ -24,9 +26,11 @@
     "@types/stream-json": "^1.7.8",
     "@types/three": "^0.181.0",
     "@types/validator": "^13.15.2",
+    "eslint": "^9.39.2",
     "pino-pretty": "^13.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.1",
