--- a/client/package.json
+++ b/client/package.json
@@ -79,6 +79,7 @@
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "invokers-polyfill": "^0.5.7",
     "json-stream-parser": "^1.3.0",
     "leva": "^0.10.0",
     "lucide-react": "^0.553.0",
