--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
+    "@tanstack/react-virtual": "^3.13.13",
     "@types/react-window": "^1.8.8",
     "@types/three": "^0.177.0",
     "@vercel/analytics": "1.3.1",
