refactor: configuration related to centralized Redis queues

--- a/server/.env.example
+++ b/server/.env.example
@@ -76,3 +76,17 @@ SMTP_AUTH_USER=
 # SMTP_AUTH_PASSWORD (OPTIONAL): Enter the password to authenticate 
 # with "SMTP_AUTH_USER".
 SMTP_AUTH_PASSWORD=
+
+# Queues
+ANALYSIS_QUEUE_MAX_CONCURRENT_JOBS=5
+ANALYSIS_QUEUE_CPU_LOAD_THRESHOLD=80
+ANALYSIS_QUEUE_RAM_LOAD_THRESHOLD=85
+
+RASTERIZER_QUEUE_MAX_CONCURRENT_JOBS=5
+RASTERIZER_QUEUE_CPU_LOAD_THRESHOLD=85
+RASTERIZER_QUEUE_RAM_LOAD_THRESHOLD=85
+
+TRAJECTORY_QUEUE_MAX_CONCURRENT_JOBS=5
+TRAJECTORY_QUEUE_CPU_LOAD_THRESHOLD=60
+TRAJECTORY_QUEUE_RAM_LOAD_THRESHOLD=70
+TRAJECTORY_QUEUE_JOB_CHUNK_SIZE=20
