--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/ssh2": "^1.15.5",
+    "@types/unzipper": "^0.10.11",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -74,6 +75,7 @@
     "ssh2": "^1.17.0",
     "three": "^0.181.1",
     "tsconfig-paths": "^4.2.0",
+    "unzipper": "^0.12.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "yaml": "^2.8.1"
