feat: added mwm_csp to dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ build-release/
 !/opendxa/dependencies/geogram/**
 !/opendxa/dependencies/fast_float/**
 !/opendxa/dependencies/mwm_csp/**
+!/opendxa/dependencies/mwm_csp/
 debug-data/
 
 client/wasm/zstd/dependencies
