--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,8 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "canvas": "^3.2.0",
+    "chart.js": "^4.5.1",
+    "chartjs-node-canvas": "^5.0.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
