--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
     "vite-plugin-monaco-editor": "^1.1.0",
+    "xlsx": "^0.18.5",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "zustand": "^5.0.6"
