--- a/server-clean-architecture/package.json
+++ b/server-clean-architecture/package.json
@@ -19,9 +19,11 @@
     "@types/draco3dgltf": "^1.4.3",
     "@types/express": "^5.0.3",
     "@types/gl": "^6.0.5",
+    "@types/identicon.js": "^2.3.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
+    "@types/node": "^25.0.3",
     "@types/nodemailer": "^7.0.4",
     "@types/socket.io": "^3.0.1",
     "@types/stream-json": "^1.7.8",
@@ -80,7 +82,7 @@
     "tsconfig-paths": "^4.2.0",
     "unzipper": "^0.12.3",
     "uuid": "^11.1.0",
-    "validator": "^13.15.15",
+    "validator": "^13.15.26",
     "yaml": "^2.8.1"
   },
   "name": "volterra-server",
