--- a/server-clean-architecture/package.json
+++ b/server-clean-architecture/package.json
@@ -75,11 +75,13 @@
     "passport-microsoft": "^2.1.0",
     "pino": "^10.1.0",
     "pm2": "^6.0.8",
+    "reflect-metadata": "^0.2.2",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "ssh2": "^1.17.0",
     "three": "^0.181.1",
     "tsconfig-paths": "^4.2.0",
+    "tsyringe": "^4.10.0",
     "unzipper": "^0.12.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.26",
